# ARMPA

./: .gitignore  pyproject.toml  requirements.txt
LATS/: __init__.py  lats.py
LanguageAgentTreeSearch/: TOGETHER_API_README.md  test_together_api.py  together_config.py
LanguageAgentTreeSearch/hotpot/: models.py
LanguageAgentTreeSearch/programming/generators/: model.py
LanguageAgentTreeSearch/webshop/: lats.py  models.py
environments/: base_env.py  webarena.py  webshop.py
experiments/: lats_webarena.ipynb
models/: litellm.py
webarena/: prepare.sh  test.py
webarena/llms/: __init__.py  utils.py
webarena/llms/providers/: litellm_utils.py
