[project]
name = "armpa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "aiohttp>=3.13.0",
    "aiosignal>=1.4.0",
    "astunparse>=1.6.3",
    "async-timeout>=5.0.1",
    "attrs>=25.4.0",
    "backoff>=2.2.1",
    "bs4>=0.0.2",
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.3",
    "datasets>=4.2.0",
    "frozenlist>=1.8.0",
    "idna>=3.11",
    "ipykernel>=6.30.1",
    "jsonlines>=4.0.0",
    "litellm>=1.78.0",
    "matplotlib>=3.10.7",
    "mpmath>=1.3.0",
    "multidict>=6.7.0",
    "numpy>=2.3.3",
    "openai>=2.3.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sympy>=1.14.0",
    "tenacity>=9.1.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
    "urllib3>=2.5.0",
    "yarl>=1.22.0",
]
