[project]
name = "armpa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "aiohttp",
    "aiolimiter",
    "aiosignal",
    "astunparse",
    "async-timeout",
    "attrs",
    "backoff",
    "beartype==0.12.0",
    "certifi",
    "charset-normalizer",
    "datasets",
    "evaluate",
    "flask",
    "frozenlist",
    "greenlet>=3.0.0",
    "gymnasium",
    "idna",
    "jsonlines",
    "litellm",
    "mpmath",
    "multidict",
    "nltk",
    "numpy",
    "openai==0.27.0",
    "pandas",
    "pillow",
    "playwright>=1.40.0",
    "requests",
    "sympy",
    "tenacity",
    "text-generation",
    "tiktoken",
    "torch",
    "tqdm",
    "transformers==4.33.2",
    "types-tqdm",
    "urllib3",
    "yarl",
]
